--- a/templates/results.html
+++ b/templates/results.html
@@ -18,23 +18,19 @@
 </tr>
 </thead>
 <tbody>
-{% for contact in contacts %}
-  {% for policy in contact.policies %}
-<tr>
-    <td>{{ policy.id }}</td>
-    <td>{{contact.first}}</td>
-    <td>{{contact.last}}</td>
-    <td>{{contact.street}}</td>
-    <td>{{contact.city}}</td>
-    <td>{{contact.state}}</td>
-    <td>{{contact.zipcode}}</td>
-    <td>{{contact.phonenumber}}</td>
+<tr data-bind="foreach: contacts">
+    <td data-bind="text: id"></td>
+    <td data-bind="text: first"></td>
+    <td data-bind="text: last"></td>
+    <td data-bind="text: street"></td>
+    <td data-bind="text: city"></td>
+    <td data-bind="text: state"></td>
+    <td data-bind="text: zipcode"></td>
+    <td data-bind="text: phonenumber"></td>
     <form action="/genreport" target="_blank">
     <td><select name="lid"><option value="1" id="lid">{{letter.title}}</option></select></td>
     <td><input type="number" placeholder="Policy ID" id="policyId" name="policyId" value={{policy.id}} hidden><input type="submit" value="Generate Report"></form></td>
 </tr>
-{% endfor %}
-{% endfor %}
 </tbody>
 </table>
 
